# hop3-plugin-debug

./: pyproject.toml  readme.md
hop3-host/: pyproject.toml
hop3-host/src/hop3_host/: __init__.py  demo.py  hooks.py  hookspecs.py  plugins.py  protocols.py
hop3-plugin/: pyproject.toml
hop3-plugin/src/hop3_plugin/: __init__.py  builder.py  deployer.py  plugin.py
