[project]
name = "hop3-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.entry-points."hop3"]
smo = "hop3_plugin.plugin:DockerPlugin"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
